--- a/NYSeeNow-frontend/src/components/SidebarContent.module.css
+++ b/NYSeeNow-frontend/src/components/SidebarContent.module.css
@@ -1,17 +1,31 @@
+/* SidebarContent.module.css */
+
+.sidebar-content {
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  height: 100%; /* Take up full height of its parent */
+}
+
+.attraction-container {
+  flex-grow: 1; /* Allow this container to grow and take up available space */
+  overflow-y: auto; /* Allow vertical scrolling */
+}
+
+
+/* Remove the absolute positioning from the button container */
 .buttonContainer {
-  align-items: center;
-  justify-content: center;
-  vertical-align: middle;
-  position: relative;
-  background: transparent;
-  width: 100%;
+  width: 100%; /* Make it span the entire width of the sidebar */
+  padding: 10px; /* Add some padding for spacing */
+  background-color: inherit; /* Inherit the sidebar's background color */
 }
 
 .buttonContainer button {
-  background: rgb(255, 255, 255, 0.6);
-  color: black;
+  background: blue;
+  color: white;
   outline: none;
   border: 0;
   width: 88%;
   padding: 10px 20px;
+  position: relative; /* Change this to relative */
+  left: 6%; /* Center the button */
 }
