--- a/NYSeeNow-frontend/src/index.css
+++ b/NYSeeNow-frontend/src/index.css
@@ -97,6 +97,7 @@ aside.side-bar.open {
 
 
 .sidebar-content {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -107,6 +108,8 @@ aside.side-bar.open {
   padding: 1rem 1rem;
   order: 1; /* Make sure content is displayed before the icons */
   transform: translateX(-100%); /* Hide the content when the sidebar is closed */
+  z-index: 1;
+  
 }
 
 .sidebar-content.closed {
@@ -278,14 +281,6 @@ aside.side-bar.open {
   background-color: #c82333;
 }
 
-.attraction-card {
-  background: radial-gradient(circle at top left, white, black);
-  border: 1px solid gray;
-  padding: 30px;
-  margin: 10px 0;
-  position: relative;
-  max-width: 530px;
-}
 
 .busyness-indicator {
   display: flex;
@@ -304,7 +299,7 @@ aside.side-bar.open {
   background-color:#007991;
   position: absolute;
   bottom: 10px;
-  left: 60px;
+  left: 70px; 
   width: 50px;
   height: 50px;
   border-radius: 50%;
